<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UMAsimple</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="course_listings">Select Course</string>
	<string name="search">Search</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="or">or</string>
    <string name="semester">Select Semester</string>
    <string name="subject">Select Subject</string>
    <string name="course">Course Number (Optional)</string>
    <string name="go">Go!</string>
    <string name="username">Username</string>
    <string name="domain">"@maine.edu"</string>
    <string name="password">Password</string>
    <string name="plslogin">Please Login</string>
    <string name="login">Log in</string>
    <string name="umalogin">UMA Log in</string>
    <string name="skip">Skip</string>
    <string name="courseselection">Find Courses</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
